samples/_failures_safe/1761280475_21517f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_fb26192c.c: In function ‘main’:
./samples/SAFE/__tmp_fb26192c.c:145:12: error: missing terminating " character
  145 |     printf("Enter text to analyze (max 409
      |            ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_fb26192c.c:145:5: error: expected expression at end of input
  145 |     printf("Enter text to analyze (max 409
      |     ^~~~~~
./samples/SAFE/__tmp_fb26192c.c:145:5: error: expected declaration or statement at end of input
